# autoML

./: pyproject.toml  setup.cfg
src/package/: autoML.py
