[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = Jay Descalsota
author_email = jaydescalsota@gmail.com
description = A module that automates collective machine learning functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeje0883/autoML
project_urls =
    Bug Tracker = https://github.com/jeje0883/autoML/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src